--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
+p{
+    color:white;
+    margin-left:32px;
+    padding: 10px;
+}
+.accio{
+    background-color: black;
+    width: 150px;
+    height: 150px;
+}
 
-/* Your CSS Code here. */
+
