--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
-p{
+p.hello-accio-job{
     color:white;
     margin-left:32px;
     padding: 10px;
 }
-.accio{
+main.accio{
     background-color: black;
     width: 150px;
     height: 150px;
