--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ main{
     width: 150px;
     height: 150px;
 }
-.hello-accio-job{
+p.hello-accio-job{
     color:white;
     margin-left:32px;
     padding: 10px;
